Switch to Sass variables and add extra components

--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -1,11 +1,38 @@
-:root {
-  --font-family-primary: sans-serif;
-  --font-family-secondary: monospace;
+//
+// Typeface
+//
 
-  --text-h1: 3rem;
-  --text-h2: 2.5rem;
-  --text-h3: 2rem;
-  --text-h4: 1.5rem;
-  --text-h5: 1rem;
-  --text-h6: .875rem;
-}
+$font-primary: sans-serif;
+$font-secondary: serif;
+
+//
+// Type Scale
+//
+
+$h1: 4rem;
+$h2: 3rem;
+$h3: 2.25rem;
+$h4: 1.5rem;
+$h5: 1.25rem;
+$h6: 1rem;
+$h7: .75rem;
+
+//
+// Spacing
+//
+
+$space-1: .5rem;
+$space-2: 1rem;
+$space-3: 2rem;
+$space-4: 4rem;
+
+$width-md: 768px;
+$width-lg: 960px;
+$width-xl: 1400px;
+
+//
+// Color
+//
+
+$black: #000;
+$white: #fff;
