--- a/assets/style.scss
+++ b/assets/style.scss
@@ -1,14 +1,21 @@
 ---
 ---
 
+//
+// Base reset and utilties
+//
+
 @import "variables";
 @import "base";
 @import "utilities";
 @import "spacing";
 
+//
 // Components
+//
 
 // Component breakpoint includes
 //
 // https://open-source-life.com/2020/12/05/nifty-jekyll-tips-for-managing-assets.html
+
 @import "breakpoints";
